erDiagram
    USERS ||--o{ PROVIDERS : crea
    USERS ||--o{ INVOICES : carga
    USERS ||--o{ INVOICES : confirma
    USERS ||--o{ PROCESSING_LOGS : registra
    USERS ||--o{ REPORTS : genera
    USERS ||--o{ AUTOMATION_RUNS : ejecuta
    USERS ||--o{ EMAIL_LOGS : solicita

    INVOICE_CATEGORIES ||--o{ PROVIDERS : clasifica
    INVOICE_CATEGORIES ||--o{ INVOICES : clasifica
    PROVIDERS ||--o{ INVOICES : emite
    INVOICES ||--o{ INVOICE_ITEMS : contiene
    INVOICES ||--o{ PROCESSING_LOGS : produce
    INVOICES ||--o{ AUTOMATION_RUNS : automatiza
    INVOICES ||--o{ INVOICES : duplica
    REPORTS ||--o{ EMAIL_LOGS : adjunta

    USERS {
        bigint id PK
        varchar full_name
        citext username UK
        citext email UK
        text password_hash
        enum role
        boolean is_active
    }

    PROVIDERS {
        bigint id PK
        varchar name
        citext nit
        bigint category_id FK
        boolean is_active
    }

    INVOICE_CATEGORIES {
        bigint id PK
        citext name UK
        boolean is_active
    }

    INVOICES {
        bigint id PK
        varchar invoice_number
        date invoice_date
        bigint provider_id FK
        bigint category_id FK
        numeric subtotal
        numeric tax
        numeric total
        varchar file_sha256
        numeric ocr_confidence
        jsonb extracted_data
        jsonb validation_errors
        enum status
        bigint duplicate_of_invoice_id FK
    }

    PROCESSING_LOGS {
        bigint id PK
        bigint invoice_id FK
        enum stage
        enum status
        text message
        jsonb details
        integer duration_ms
    }

    REPORTS {
        bigint id PK
        enum report_type
        enum format
        enum status
        varchar file_name
        jsonb filters
    }

    AUTOMATION_RUNS {
        bigint id PK
        bigint invoice_id FK
        varchar automation_type
        enum status
        jsonb result
        text evidence_path
    }

    EMAIL_LOGS {
        bigint id PK
        bigint report_id FK
        citext recipient_email
        varchar subject
        varchar status
        varchar smtp_message_id
    }

    INVOICE_ITEMS {
        bigint id PK
        bigint invoice_id FK
        integer line_number
        text description
        numeric quantity
        numeric unit_price
        numeric line_total
    }
